--- a/all/themes/pixelgarage/less/mixins/text.less
+++ b/all/themes/pixelgarage/less/mixins/text.less
@@ -112,10 +112,10 @@
       display: block;
       overflow: hidden;
       margin: 20px auto;
-      width: 100% !important;
+      width: 80% !important;
       max-width: 100%;
-      height: 0 !important;
-      padding-bottom: 56.25%; // 16:9 ratio
+      height: auto;
+      min-height: 350px;
     }
   }
 
