--- a/all/themes/pixelgarage/less/content.less
+++ b/all/themes/pixelgarage/less/content.less
@@ -30,6 +30,14 @@
     }
   }
 
+  // sharper fonts
+  #pxl-mixins.sharp-fonts;
+
+  //
+  // SVG correction for IE
+  img[src*=".svg"] {
+    width: 100%;
+  }
 }
 
 html {
