--- a/all/themes/pixelgarage/less/pxlComponents/view-courses.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-courses.less
@@ -81,7 +81,7 @@
               width: 100%;
               padding: 9px 10px 11px;
               font-size: 14px;
-              color: @pxl-color-gray-text;
+              color: @text-color;
               text-decoration: none;
             }
           }
@@ -91,7 +91,7 @@
             display: none;
             position: absolute;
             top: 0;
-            right: 15px;
+            right: 25px;
             padding: 0;
 
             a {
