--- a/all/themes/pixelgarage/less/header.less
+++ b/all/themes/pixelgarage/less/header.less
@@ -39,6 +39,7 @@ header#navbar {
     img {
       display: inline-block;
       max-height: 60px;
+      height: 60px;
       width: auto;
     }
   }
