--- a/all/themes/pixelgarage/less/pxlComponents/node-tweet.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-tweet.less
@@ -8,71 +8,6 @@
 
 // Mixins
 // -------------------------
-.wysiwyg-body() {
-  h1, h2, h3, h4, h5, h6 {
-    font-family: @pxl-text-font;
-    #pxl-mixins.font-size-responsive(@font-size-base);
-  }
-  h1, h2, h3 {
-    #pxl-mixins.font-size-responsive(14px);
-  }
-
-  p, div, tbody td {
-    font-family: @pxl-text-font-light;
-    font-size: 14px;
-    #pxl-mixins.hyphenate;
-
-    @media @narrow {
-      font-size: @font-size-base;
-    }
-  }
-
-  li {
-    font-family: @pxl-text-font-light;
-    font-size: 14px;
-
-    @media @narrow {
-      font-size: @font-size-base;
-    }
-  }
-
-  pre, address {
-    font-family: @pxl-text-font-light-italics;
-    font-size: 14px;
-
-    @media @narrow {
-      font-size: @font-size-base;
-    }
-  }
-
-  hr {
-    border: 0;
-    border-bottom: 2px solid @pxl-border-color;
-    background: none;
-  }
-
-  table, tr, th, td {
-    border-color: @pxl-border-color;
-  }
-
-  img {
-    display: block;
-    margin: 0 auto;
-    //width: 80%;
-    height: auto;
-    max-width: 100%;
-  }
-
-  embed, video, audio, iframe {
-    display: block;
-    overflow: hidden;
-    margin: 20px auto;
-    width: 80% !important;
-    max-width: 100%;
-    height: auto;
-    min-height: 350px;
-  }
-}
 
 
 
@@ -146,7 +81,7 @@
       }
 
       .field-name-body {
-        #pxl-mixins.wysiwyg-body;
+        #pxl-mixins.wysiwyg-body(14px; @font-size-base; 14px);
 
         @media @tablet {
           //.content-columns(2);
@@ -219,7 +154,7 @@
       .field-name-body {
         margin: 0 0 20px;
 
-        .wysiwyg-body;
+        #pxl-mixins.wysiwyg-body(14px; @font-size-base; 14px);
         color: @pxl-color-gray-text;
 
         @media @tablet {
