--- a/all/themes/pixelgarage/less/pxlComponents/node-video.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-video.less
@@ -81,7 +81,7 @@
       }
 
       .field-name-body {
-        #pxl-mixins.wysiwyg-body;
+        #pxl-mixins.wysiwyg-body(14px; @font-size-base; 14px);
 
         @media @tablet {
           //.content-columns(2);
@@ -174,7 +174,7 @@
       .field-name-body {
         margin: 0 0 20px;
 
-        .wysiwyg-body;
+        #pxl-mixins.wysiwyg-body(14px; @font-size-base; 14px);
         color: @pxl-color-gray-text;
 
         @media @tablet {
