--- a/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
+++ b/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
@@ -27,6 +27,7 @@
 @import "node-testimonials";
 @import "node-video";
 @import "node-tweet";
+@import "node-facebook";
 
 // views
 @import "view-banners";
