--- a/all/themes/pixelgarage/less/pxlComponents/node-facebook.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-facebook.less
@@ -33,6 +33,7 @@
       }
 
       .field-name-title {
+        display: none;
         h2 {
           margin-top: 0;
           font-family: @pxl-text-font-bold;
@@ -52,6 +53,7 @@
       }
 
       .field-name-field-name-from {
+        display: none;
         padding: 0 0 10px;
         width: 100%;
 
@@ -112,6 +114,7 @@
       width: 100%;
 
       .field-name-title {
+        display: none;
         h2 {
           margin: 0;
           padding: 15px 0;
@@ -122,6 +125,7 @@
       }
 
       .field-name-field-name-from {
+        display: none;
         padding: 0 0 10px;
         width: 100%;
 
