--- a/all/themes/pixelgarage/less/pxlComponents/view-locations.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-locations.less
@@ -164,6 +164,7 @@
                 display: inline-block;
                 width: 18px;
                 height: 14px;
+                margin-right: 5px;
                 background: url(../images/contact_icon_email.svg) no-repeat top left/contain;
               }
 
