--- a/all/themes/pixelgarage/css/style.css
+++ b/all/themes/pixelgarage/css/style.css
@@ -9600,8 +9600,6 @@ body.navbar-tray-open.navbar-vertical.navbar-fixed {
 }
 .panel-display .panel-panel .panel-pane.pane-custom .panel-content img {
   display: block;
-  margin: 0 auto;
-  width: 80%;
   height: auto;
   max-width: 100%;
 }
@@ -9616,6 +9614,9 @@ body.navbar-tray-open.navbar-vertical.navbar-fixed {
   max-width: 100%;
   height: auto;
   min-height: 350px;
+}
+.panel-display .panel-panel .panel-pane.pane-custom .panel-content iframe {
+  min-height: 800px;
 }
 /*
  *  Login form component
@@ -10562,8 +10563,6 @@ body.modal-open #modal-exposed-search-form .modal-dialog .modal-content .modal-b
 }
 .node.node-page .row div.col-sm-12 .field-name-body img {
   display: block;
-  margin: 0 auto;
-  width: 80%;
   height: auto;
   max-width: 100%;
 }
@@ -10578,6 +10577,9 @@ body.modal-open #modal-exposed-search-form .modal-dialog .modal-content .modal-b
   max-width: 100%;
   height: auto;
   min-height: 350px;
+}
+.node.node-page .row div.col-sm-12 .field-name-body iframe {
+  min-height: 800px;
 }
 @media screen and (min-width: 768px) {
 }
@@ -10693,8 +10695,6 @@ body.modal-open #modal-exposed-search-form .modal-dialog .modal-content .modal-b
 }
 .node-webform .row div.col-sm-12 .field-name-body img {
   display: block;
-  margin: 0 auto;
-  width: 80%;
   height: auto;
   max-width: 100%;
 }
@@ -10709,6 +10709,9 @@ body.modal-open #modal-exposed-search-form .modal-dialog .modal-content .modal-b
   max-width: 100%;
   height: auto;
   min-height: 350px;
+}
+.node-webform .row div.col-sm-12 .field-name-body iframe {
+  min-height: 800px;
 }
 ul.webform-submission-actions {
   margin: 10px 0;
@@ -10852,8 +10855,6 @@ ul.webform-submission-actions li a:active {
 }
 .webform-confirmation img {
   display: block;
-  margin: 0 auto;
-  width: 80%;
   height: auto;
   max-width: 100%;
 }
@@ -10868,6 +10869,9 @@ ul.webform-submission-actions li a:active {
   max-width: 100%;
   height: auto;
   min-height: 350px;
+}
+.webform-confirmation iframe {
+  min-height: 800px;
 }
 form.webform-client-form a {
   color: #cc3333;
@@ -11958,8 +11962,6 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
 }
 .node.node-location .row .col-sm-12 .col-right .field-name-field-map-details .field-item img {
   display: block;
-  margin: 0 auto;
-  width: 80%;
   height: auto;
   max-width: 100%;
 }
@@ -11974,6 +11976,9 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
   max-width: 100%;
   height: auto;
   min-height: 350px;
+}
+.node.node-location .row .col-sm-12 .col-right .field-name-field-map-details .field-item iframe {
+  min-height: 800px;
 }
 @media screen and (min-width: 768px) {
   .node.node-location .row .col-sm-12 .col-left {
@@ -12189,8 +12194,6 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
 }
 .node.node-brochure .row div.col-sm-12 .field-name-body img {
   display: block;
-  margin: 0 auto;
-  width: 80%;
   height: auto;
   max-width: 100%;
 }
@@ -12205,6 +12208,9 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
   max-width: 100%;
   height: auto;
   min-height: 350px;
+}
+.node.node-brochure .row div.col-sm-12 .field-name-body iframe {
+  min-height: 800px;
 }
 @media screen and (min-width: 768px) {
 }
@@ -12348,8 +12354,6 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
 }
 .node.node-news.view-mode-teaser .row div.col-sm-12 .field-name-body img {
   display: block;
-  margin: 0 auto;
-  width: 80%;
   height: auto;
   max-width: 100%;
 }
@@ -12364,6 +12368,9 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
   max-width: 100%;
   height: auto;
   min-height: 350px;
+}
+.node.node-news.view-mode-teaser .row div.col-sm-12 .field-name-body iframe {
+  min-height: 800px;
 }
 @media screen and (min-width: 768px) {
 }
@@ -12532,8 +12539,6 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
 }
 .node.node-news.view-mode-full .row div.col-sm-12 .field-name-body img {
   display: block;
-  margin: 0 auto;
-  width: 80%;
   height: auto;
   max-width: 100%;
 }
@@ -12548,6 +12553,9 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
   max-width: 100%;
   height: auto;
   min-height: 350px;
+}
+.node.node-news.view-mode-full .row div.col-sm-12 .field-name-body iframe {
+  min-height: 800px;
 }
 @media screen and (min-width: 768px) {
 }
@@ -12748,8 +12756,6 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
 }
 .node.node-video.view-mode-teaser .row div.col-sm-12 .field-name-body img {
   display: block;
-  margin: 0 auto;
-  width: 80%;
   height: auto;
   max-width: 100%;
 }
@@ -12764,6 +12770,9 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
   max-width: 100%;
   height: auto;
   min-height: 350px;
+}
+.node.node-video.view-mode-teaser .row div.col-sm-12 .field-name-body iframe {
+  min-height: 800px;
 }
 @media screen and (min-width: 768px) {
 }
@@ -12944,8 +12953,6 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
 }
 .node.node-video.view-mode-full .row div.col-sm-12 .field-name-body img {
   display: block;
-  margin: 0 auto;
-  width: 80%;
   height: auto;
   max-width: 100%;
 }
@@ -12960,6 +12967,9 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
   max-width: 100%;
   height: auto;
   min-height: 350px;
+}
+.node.node-video.view-mode-full .row div.col-sm-12 .field-name-body iframe {
+  min-height: 800px;
 }
 @media screen and (min-width: 768px) {
 }
@@ -13127,8 +13137,6 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
 }
 .node.node-tweet.view-mode-teaser .row div.col-sm-12 .field-name-body img {
   display: block;
-  margin: 0 auto;
-  width: 80%;
   height: auto;
   max-width: 100%;
 }
@@ -13143,6 +13151,9 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
   max-width: 100%;
   height: auto;
   min-height: 350px;
+}
+.node.node-tweet.view-mode-teaser .row div.col-sm-12 .field-name-body iframe {
+  min-height: 800px;
 }
 @media screen and (min-width: 768px) {
 }
@@ -13297,8 +13308,6 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
 }
 .node.node-tweet.view-mode-full .row div.col-sm-12 .field-name-body img {
   display: block;
-  margin: 0 auto;
-  width: 80%;
   height: auto;
   max-width: 100%;
 }
@@ -13313,6 +13322,9 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
   max-width: 100%;
   height: auto;
   min-height: 350px;
+}
+.node.node-tweet.view-mode-full .row div.col-sm-12 .field-name-body iframe {
+  min-height: 800px;
 }
 @media screen and (min-width: 768px) {
 }
@@ -13472,8 +13484,6 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
 }
 .node.node-facebook-post.view-mode-teaser .row div.col-sm-12 .field-name-body img {
   display: block;
-  margin: 0 auto;
-  width: 80%;
   height: auto;
   max-width: 100%;
 }
@@ -13488,6 +13498,9 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
   max-width: 100%;
   height: auto;
   min-height: 350px;
+}
+.node.node-facebook-post.view-mode-teaser .row div.col-sm-12 .field-name-body iframe {
+  min-height: 800px;
 }
 @media screen and (min-width: 768px) {
 }
@@ -13719,8 +13732,6 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
 }
 .node.node-facebook-post.view-mode-full .row div.col-sm-12 .field-name-body img {
   display: block;
-  margin: 0 auto;
-  width: 80%;
   height: auto;
   max-width: 100%;
 }
@@ -13736,7 +13747,134 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
   height: auto;
   min-height: 350px;
 }
+.node.node-facebook-post.view-mode-full .row div.col-sm-12 .field-name-body iframe {
+  min-height: 800px;
+}
 @media screen and (min-width: 768px) {
+}
+/*
+ *  Node remoteform component
+ * --------------------------------------------------*/
+.node.node-remote-form .row div.col-sm-12 {
+  width: 100%;
+}
+.node.node-remote-form .row div.col-sm-12 .field-name-body h1,
+.node.node-remote-form .row div.col-sm-12 .field-name-body h2,
+.node.node-remote-form .row div.col-sm-12 .field-name-body h3,
+.node.node-remote-form .row div.col-sm-12 .field-name-body h4,
+.node.node-remote-form .row div.col-sm-12 .field-name-body h5,
+.node.node-remote-form .row div.col-sm-12 .field-name-body h6 {
+  font-family: 'SohoGothicProRegular', serif;
+  font-size: 13px;
+}
+@media screen and (min-width: 480px) {
+  .node.node-remote-form .row div.col-sm-12 .field-name-body h1,
+  .node.node-remote-form .row div.col-sm-12 .field-name-body h2,
+  .node.node-remote-form .row div.col-sm-12 .field-name-body h3,
+  .node.node-remote-form .row div.col-sm-12 .field-name-body h4,
+  .node.node-remote-form .row div.col-sm-12 .field-name-body h5,
+  .node.node-remote-form .row div.col-sm-12 .field-name-body h6 {
+    font-size: 2.21354167vw;
+  }
+}
+@media screen and (min-width: 768px) {
+  .node.node-remote-form .row div.col-sm-12 .field-name-body h1,
+  .node.node-remote-form .row div.col-sm-12 .field-name-body h2,
+  .node.node-remote-form .row div.col-sm-12 .field-name-body h3,
+  .node.node-remote-form .row div.col-sm-12 .field-name-body h4,
+  .node.node-remote-form .row div.col-sm-12 .field-name-body h5,
+  .node.node-remote-form .row div.col-sm-12 .field-name-body h6 {
+    font-size: 17px;
+  }
+}
+.node.node-remote-form .row div.col-sm-12 .field-name-body h1,
+.node.node-remote-form .row div.col-sm-12 .field-name-body h2,
+.node.node-remote-form .row div.col-sm-12 .field-name-body h3 {
+  font-size: 15px;
+}
+@media screen and (min-width: 480px) {
+  .node.node-remote-form .row div.col-sm-12 .field-name-body h1,
+  .node.node-remote-form .row div.col-sm-12 .field-name-body h2,
+  .node.node-remote-form .row div.col-sm-12 .field-name-body h3 {
+    font-size: 3.125vw;
+  }
+}
+@media screen and (min-width: 768px) {
+  .node.node-remote-form .row div.col-sm-12 .field-name-body h1,
+  .node.node-remote-form .row div.col-sm-12 .field-name-body h2,
+  .node.node-remote-form .row div.col-sm-12 .field-name-body h3 {
+    font-size: 24px;
+  }
+}
+.node.node-remote-form .row div.col-sm-12 .field-name-body p,
+.node.node-remote-form .row div.col-sm-12 .field-name-body div,
+.node.node-remote-form .row div.col-sm-12 .field-name-body tbody td {
+  font-family: 'SohoGothicProLight', serif;
+  font-size: 14px;
+  word-break: break-word;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  -o-hyphens: auto;
+  hyphens: auto;
+}
+@media screen and (min-width: 480px) {
+  .node.node-remote-form .row div.col-sm-12 .field-name-body p,
+  .node.node-remote-form .row div.col-sm-12 .field-name-body div,
+  .node.node-remote-form .row div.col-sm-12 .field-name-body tbody td {
+    font-size: 16px;
+  }
+}
+.node.node-remote-form .row div.col-sm-12 .field-name-body li {
+  font-family: 'SohoGothicProLight', serif;
+  font-size: 14px;
+}
+@media screen and (min-width: 480px) {
+  .node.node-remote-form .row div.col-sm-12 .field-name-body li {
+    font-size: 16px;
+  }
+}
+.node.node-remote-form .row div.col-sm-12 .field-name-body pre,
+.node.node-remote-form .row div.col-sm-12 .field-name-body address {
+  font-family: 'SohoGothicProLightItalic' serif;
+  font-size: 14px;
+}
+@media screen and (min-width: 480px) {
+  .node.node-remote-form .row div.col-sm-12 .field-name-body pre,
+  .node.node-remote-form .row div.col-sm-12 .field-name-body address {
+    font-size: 16px;
+  }
+}
+.node.node-remote-form .row div.col-sm-12 .field-name-body hr {
+  border: 0;
+  border-bottom: 2px solid #c9c9c9;
+  background: none;
+}
+.node.node-remote-form .row div.col-sm-12 .field-name-body table,
+.node.node-remote-form .row div.col-sm-12 .field-name-body tr,
+.node.node-remote-form .row div.col-sm-12 .field-name-body th,
+.node.node-remote-form .row div.col-sm-12 .field-name-body td {
+  border-color: #c9c9c9;
+}
+.node.node-remote-form .row div.col-sm-12 .field-name-body img {
+  display: block;
+  height: auto;
+  max-width: 100%;
+}
+.node.node-remote-form .row div.col-sm-12 .field-name-body embed,
+.node.node-remote-form .row div.col-sm-12 .field-name-body video,
+.node.node-remote-form .row div.col-sm-12 .field-name-body audio,
+.node.node-remote-form .row div.col-sm-12 .field-name-body iframe {
+  display: block;
+  overflow: hidden;
+  margin: 20px auto;
+  width: 80% !important;
+  max-width: 100%;
+  height: auto;
+  min-height: 350px;
+}
+.node.node-remote-form .row div.col-sm-12 .field-name-body iframe {
+  min-height: 800px;
 }
 /*
  *  Banners view (navigation)
@@ -14915,8 +15053,6 @@ body.excollege_section .view.view-courses .view-content .panel-group .panel .pan
 }
 .view.view-course-tabs .view-content .tab-content .tab-pane .node-course-tabs .row .col-sm-12 .field-name-body img {
   display: block;
-  margin: 0 auto;
-  width: 80%;
   height: auto;
   max-width: 100%;
 }
@@ -14931,6 +15067,9 @@ body.excollege_section .view.view-courses .view-content .panel-group .panel .pan
   max-width: 100%;
   height: auto;
   min-height: 350px;
+}
+.view.view-course-tabs .view-content .tab-content .tab-pane .node-course-tabs .row .col-sm-12 .field-name-body iframe {
+  min-height: 800px;
 }
 /*
  *  View Course-times component
