--- a/all/themes/pixelgarage/less/mixins/text.less
+++ b/all/themes/pixelgarage/less/mixins/text.less
@@ -115,8 +115,6 @@
 
     img {
       display: block;
-      margin: 0 auto;
-      width: 80%;
       height: auto;
       max-width: 100%;
     }
@@ -129,6 +127,9 @@
       max-width: 100%;
       height: auto;
       min-height: 350px;
+    }
+    iframe {
+      min-height: 800px;
     }
   }
 
