--- a/all/themes/pixelgarage/less/pxlComponents/node-remoteform.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-remoteform.less
@@ -14,12 +14,18 @@
 // General settings
 // -------------------------
 .node.node-remote-form {
+  margin-top: 50px;
+
   .row {
     div.col-sm-12 {
       width: 100%;
 
       .field-name-body {
         #pxl-mixins.wysiwyg-body;
+
+        iframe {
+          min-height: 1600px;
+        }
 
       }
     }
