- subfooter styling improved for images

--- a/all/themes/pixelgarage/css/style.css
+++ b/all/themes/pixelgarage/css/style.css
@@ -16079,10 +16079,9 @@ body.excollege_section .main-container .container .row section h1.page-header {
 .subfooter .container .region-subfooter .block-nodeblock .node-footer.view-mode-subfooter .row .col-sm-6 .field-name-copyright .field-name-body .field-item div a {
   display: inline-block;
   padding: 10px 0 10px 5px;
-  width: 80%;
 }
 .subfooter .container .region-subfooter .block-nodeblock .node-footer.view-mode-subfooter .row .col-sm-6 .field-name-copyright .field-name-body .field-item div a img {
-  width: 100%;
+  max-width: 100%;
   height: auto;
 }
 .subfooter .container .region-subfooter .block-nodeblock .node-footer.view-mode-subfooter .row .col-sm-6 .field-name-certificates {
