--- a/all/themes/pixelgarage/less/mixins/bs-modal.less
+++ b/all/themes/pixelgarage/less/mixins/bs-modal.less
@@ -14,6 +14,10 @@
   // Bootstrap modal
   .modal() {
     .modal-backdrop {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
       bottom: 0;
       background-color: @pxl-color-hso-sec;
       &.in {
